crates/top/re_sdk/src/lenses/snapshots/re_sdk__lenses__ast__test__scatter_columns_static.snap
---
source: crates/top/re_sdk/src/lenses/ast.rs
expression: "format!(\"{chunk:-240}\")"
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                         │
│ * entity_path: /scatter_test/exploded                                                                             │
│ * heap_size_bytes: [**REDACTED**]                                                                                 │
│ * id: [**REDACTED**]                                                                                              │
│ * version: [**REDACTED**]                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────┬────────────────────────────────────┐ │
│ │ RowId                                         ┆ my_timestamp             ┆ exploded_strings                   │ │
│ │ ---                                           ┆ ---                      ┆ ---                                │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable i64       ┆ type: nullable List[nullable Utf8] │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: my_timestamp ┆ component: exploded_strings        │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true          ┆ kind: data                         │ │
│ │ is_sorted: true                               ┆ kind: index              ┆                                    │ │
│ │ kind: control                                 ┆                          ┆                                    │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════╪════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1                        ┆ [one]                              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2                        ┆ [two]                              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 3                        ┆ [three]                            │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 4                        ┆ [four]                             │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 5                        ┆ [null]                             │ │
│ └───────────────────────────────────────────────┴──────────────────────────┴────────────────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
